--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,51 +10,226 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="header row col-12">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Активная</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Выпадающий список</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Действие</a>
-                    <a class="dropdown-item" href="#">Другое действие</a>
-                    <a class="dropdown-item" href="#">Что-то еще здесь</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Отдельная ссылка</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Выпадающий список</a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Действие</a>
-                      <a class="dropdown-item" href="#">Другое действие</a>
-                      <a class="dropdown-item" href="#">Что-то еще здесь</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Отдельная ссылка</a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Выпадающий список</a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Действие</a>
-                      <a class="dropdown-item" href="#">Другое действие</a>
-                      <a class="dropdown-item" href="#">Что-то еще здесь</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Отдельная ссылка</a>
-                    </div>
-                  </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Ссылка</a>
+                    <a class="nav-link" href="#"><img src="/images/Logo.png" alt="logo" class="logo"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Отключенная</a>
+                    <a class="nav-link" href="#">Über Uns</a>
                 </li>
-              </ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Produkte</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Produkte1</a>
+                        <a class="dropdown-item" href="#">Produkte2</a>
+                        <a class="dropdown-item" href="#">Produkte3</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Peripherietechnik</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Peripherietechnik1</a>
+                        <a class="dropdown-item" href="#">Peripherietechnik2</a>
+                        <a class="dropdown-item" href="#">Peripherietechnik3</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dienstleistungen</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Dienstleistungen1</a>
+                        <a class="dropdown-item" href="#">Dienstleistungen2</a>
+                        <a class="dropdown-item" href="#">Dienstleistungen3</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Klimatechnik</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Presse</a>
+                </li>
+          </ul>
+          <div class="row">
+              <div class="header-left col-6">
+                  <h1 class="header-left-title">Luftkondensierte Kältemaschinen & Kaltwassersätze</h1>
+                  <p>Aufgrund der kompakten Bauart werden platzsparende luftkondensierte Kompressionskältemaschinen 
+                    (umgangsspr. „Kaltwassersätze“) vielseitig zur 
+                    Prozesskühlung und Gebäudeklimatisierung eingesetzt.
+                    </p>
+              </div>
+              <div class="header-riht col-6">
+                  <img src="/images/Transparent3.png" alt="Transparent3">
+              </div>
+          </div>
+        </div>
+        <div class="energ row">
+            <div class="energ-left col-8">
+                <img src="/images/Refrigeration.png" alt="Refrigeration">
+            </div>
+            <div class="energ-right col-4">
+                <h3 class="energ-right-title">ENERGIEEFFIZIENZ IM FOKUS</h3>
+                <p>Bei der Anschaffung sollte deshalb besonders auf energieeffiziente Systeme geachtet werden, denn die Betriebskosten der Anlage überschreiten 
+                    erfahrungsgemäß über die Lebensdauer hinweg die einmaligen Anschaffungskosten um ein vielfaches. 
+                    Insofern sind die Themen Kompressortechnik und Einsatz von Freikühlung von besonderer Bedeutung, 
+                    sowie Steuer- und Regelungstechnik besonders wichtig.</p>
+            </div>
         </div>
     </div>
-    
+    <div class="modern row">
+        <div class="modern-left col-5">
+            <img src="/images/asv4sabu3.png" alt="foto">
+        </div>
+        <div class="modern-right col-7">
+            <h3 class="modern-right-title">MODERNSTE STANDARDS</h3>
+            <p>Aktuelle Richtlinien und Verordnungen bezüglich des Kältemittel Phase-Downs müssen 
+                berücksichtigt werden. Der langfristige Einsatz des Kältemittels muss sowohl nach 
+                ökonomischen als auch strategischen Gesichtspunkten entschieden werden.
+            </p>
+            <p>
+                Alle unsere Kältemaschinen entsprechen dem modernsten Stand der Technik und werden in den unterschiedlichsten Branchen eingesetzt. Unser Angebot umfasst ein breites Sortiment an natürlichen und frigenen Kältemitteln,
+                die den aktuellsten Normen und Verordnungen entsprechen.
+            </p>
+        </div>
+    </div>
+    <div class="container">
+       <div class="spezial row">
+           <div class="spezial-left col-6">
+               <div class="spezial-left-title">
+                   <h3>
+                       Unsere Spezialität besteht aus unseren Kaltwassersätzen mit integrierter Freikühleinheit.
+                    </h3>
+                    <p>
+                        Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser energiesparend über ambiente Umgebungsluft.
+                    </p>
+                    <p>
+                        Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit erzielt größtmögliche Kosteneinsparungen 
+                        auch bei kleinen Nennleistungen.
+                    </p>   
+               </div>
+           </div>
+           <div class="spezial-right col-6">
+               <button>1</button>
+               <button>2</button>
+           </div>
+       </div> 
+       <div class="vorteile">
+           <h3>IHRE VORTEILE</h3>
+           <div class="vorteile-content row">
+               <div class="col-4">Geringe Stellfläche</div>
+               <div class="col-4">Mit und ohne integrierter Freikühlung</div>
+               <div class="col-4">Für Außentemperaturen bis +55°C</div>
+               <div class="col-4">Für Außen- und Innenaufstellung erhältlich</div>
+               <div class="col-4">Betriebsbereit bei Anlieferung</div>
+               <div class="col-4">Automatische Freikühlschaltung für verringerten Energieverbrauch</div>
+               <div class="col-4">Robustes Gehäuse für Außenaufstellung</div>
+               <div class="col-4">Geringe Schallemissionen</div>
+               <div class="col-4">Wetterfest und Langlebig</div>
+               <div class="col-4">Erhöhte Betriebssicherheit</div>
+            </div>
+       </div>
+       <div class="hauptmerk">
+           <h2 class="hauptmerk-title">HAUPTMERKMALE</h2>
+           <div class="hauptmerk-content row">
+               <div class="hauptmerk-content-left col-6">
+                   <ul class="hauptmerk-list-item">
+                       <li class="hauptmerk-list-item">
+                           ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung 
+                        </li>
+                       <li class="hauptmerk-list-item">
+                           ② Volumenströme von 1,5 m³/h bis 140 m³/h
+                        </li>
+                       <li class="hauptmerk-list-item">
+                           ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und Hochdruckbereich</li>
+                       <li class="hauptmerk-list-item">
+                            ④     Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern, 
+                            Steuerungen (optional mit Reservepumpe)
+                        </li>
+                       <li class="hauptmerk-list-item">
+                            ⑤     Mikrochannel Verflüssiger für höchste Energieeffizienz
+                       </li>
+                       <li class="hauptmerk-list-item">
+                            ⑥     Mit optionalen Kompressor Schallschutzummantelungen
+                       </li>
+                       <li class="hauptmerk-list-item">
+                            ⑦     Schallmindernde Ventilatortechnik erhältlich
+                       </li>
+                   </ul>
+               </div>
+               <div class="hauptmerk-content-right col-6">
+                    <ul class="hauptmerk-list-item">
+                        <li class="hauptmerk-list-item">
+                            ⑧    Scroll, Multiscroll und Schraubenkompressoren (optional  
+                            mit Frequenzumrichter) erhältlich 
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑨    Automatische Leistungssteuerung für Prozesse mit   
+                            variabler Kühllast
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑩      Kleine Kältemittelvolumen dank extrakompakter 
+                            Bauweise
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑪      Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. 
+                            R513a, R1234ze und R290 (Propan)
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑫      Mit automatischen Glykol Nachfüllsystemem
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑬      Mit Remote HMI
+                        </li>
+                        <li class="hauptmerk-list-item">
+                            ⑭      Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen 
+                             pro Maschine
+                        </li>
+                    </ul>
+                </div>
+           </div>
+       </div>
+       <div class="bilder">
+           <h2 class="bilder-title">BILDER</h2>
+           <div id="carouselExampleCaptions" class="carousel slide col-6" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/asv4sabu1.png" class="d-block w-100" alt="foto">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/asv4sabu1.png" class="d-block w-100" alt="foto">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/asv4sabu1.png" class="d-block w-100" alt="foto">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only"></span>
+            </a>
+          </div>
+       </div>
+       <div class="besucher">
+           <h3 class="besucher-title">BESUCHER DIESER SEITE SUCHTEN AUCH OFT NACH:</h3>
+           <div class="besucher-content row">
+               <button class="col-4">GLYKOLWANNEN</button>
+               <button class="col-4">WASSERAUFBEREITUNG</button>
+               <button class="col-4">ROHRLEITUNGSBAU</button>
+               <button class="col-4">Wärmemengenmessungen</button>
+               <button class="col-4">ANLAGELEASING</button>
+           </div>
+       </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
