--- a/index.html
+++ b/index.html
@@ -229,6 +229,20 @@
                <button class="col-4">ANLAGELEASING</button>
            </div>
        </div>
+       <div class="kontakt row">
+           <div class="col-5">
+               <h3 class="kontakt-title">Jetzt Termin vereinbaren!</h3>
+           </div>
+           <div class="col-5">
+               <p>Gerne stehen wir Ihnen für eine individuelle Beratung telefonisch und vor Ort zur Verfügung und freuen
+                uns über Ihre Kontaktaufnahme. Sprechen Sie uns an!</p>
+               <p>Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter: info@elsasser-technik.de</p>
+               <button>Kontakt</button>
+           </div>
+           <div class="col-2">
+                <img src="/images/Logo3black.png" alt="logo" class="logo">
+           </div>
+       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
