--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -118,10 +118,10 @@
       </section>
     </div>
     <section class="modern row">
-      <div class="modern-left col-5">
+      <div class="modern_left col-5">
         <img src="/images/asv4sabu3.png" alt="foto" />
       </div>
-      <div class="modern-right col-7">
+      <div class="modern_right col-7">
         <h3 class="modern-right-title">MODERNSTE STANDARDS</h3>
         <p>
           Aktuelle Richtlinien und Verordnungen bezüglich des Kältemittel
@@ -140,8 +140,8 @@
     </section>
     <div class="container">
       <section class="spezial row">
-        <div class="spezial-left col-6">
-          <div class="spezial-left-title">
+        <div class="spezial_left col-6">
+          <div class="spezial_left_title">
             <h3>
               Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
               integrierter Freikühleinheit.
@@ -158,14 +158,14 @@
             </p>
           </div>
         </div>
-        <div class="spezial-right col-6">
+        <div class="spezial_right col-6">
           <button>1</button>
           <button>2</button>
         </div>
       </section>
       <section class="vorteile">
         <h3>IHRE VORTEILE</h3>
-        <div class="vorteile-content row">
+        <div class="vorteile_content row">
           <div class="col-4">Geringe Stellfläche</div>
           <div class="col-4">Mit und ohne integrierter Freikühlung</div>
           <div class="col-4">Für Außentemperaturen bis +55°C</div>
@@ -181,57 +181,57 @@
         </div>
       </section>
       <section class="hauptmerk">
-        <h2 class="hauptmerk-title">HAUPTMERKMALE</h2>
-        <div class="hauptmerk-content row">
-          <div class="hauptmerk-content-left col-6">
-            <ul class="hauptmerk-list-item">
-              <li class="hauptmerk-list-item">
+        <h2 class="hauptmerk_title">HAUPTMERKMALE</h2>
+        <div class="hauptmerk_content row">
+          <div class="hauptmerk_content_left col-6">
+            <ul class="hauptmerk_list">
+              <li class="hauptmerk_list_item">
                 ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ② Volumenströme von 1,5 m³/h bis 140 m³/h
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und
                 Hochdruckbereich
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ④ Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern,
                 Steuerungen (optional mit Reservepumpe)
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑤ Mikrochannel Verflüssiger für höchste Energieeffizienz
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑥ Mit optionalen Kompressor Schallschutzummantelungen
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑦ Schallmindernde Ventilatortechnik erhältlich
               </li>
             </ul>
           </div>
-          <div class="hauptmerk-content-right col-6">
-            <ul class="hauptmerk-list-item">
-              <li class="hauptmerk-list-item">
+          <div class="hauptmerk_content_right col-6">
+            <ul class="hauptmerk_list_item">
+              <li class="hauptmerk_list_item">
                 ⑧ Scroll, Multiscroll und Schraubenkompressoren (optional mit
                 Frequenzumrichter) erhältlich
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑨ Automatische Leistungssteuerung für Prozesse mit variabler
                 Kühllast
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑩ Kleine Kältemittelvolumen dank extrakompakter Bauweise
               </li>
               <li class="hauptmerk-list-item">
                 ⑪ Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. R513a,
                 R1234ze und R290 (Propan)
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">
                 ⑫ Mit automatischen Glykol Nachfüllsystemem
               </li>
-              <li class="hauptmerk-list-item">⑬ Mit Remote HMI</li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk_list_item">⑬ Mit Remote HMI</li>
+              <li class="hauptmerk_list-_tem">
                 ⑭ Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen pro
                 Maschine
               </li>
@@ -240,7 +240,7 @@
         </div>
       </section>
       <section class="bilder">
-        <h2 class="bilder-title">BILDER</h2>
+        <h2 class="bilder_title">BILDER</h2>
         <div
           id="carouselExampleCaptions"
           class="carousel slide col-6"
@@ -299,10 +299,10 @@
         </div>
       </section>
       <section class="besucher">
-        <h3 class="besucher-title">
+        <h3 class="besucher_title">
           BESUCHER DIESER SEITE SUCHTEN AUCH OFT NACH:
         </h3>
-        <div class="besucher-content row">
+        <div class="besucher_content row">
           <button class="col-4">GLYKOLWANNEN</button>
           <button class="col-4">WASSERAUFBEREITUNG</button>
           <button class="col-4">ROHRLEITUNGSBAU</button>
@@ -312,7 +312,7 @@
       </section>
       <section class="kontakt row">
         <div class="col-5">
-          <h3 class="kontakt-title">Jetzt Termin vereinbaren!</h3>
+          <h3 class="kontakt_title">Jetzt Termin vereinbaren!</h3>
         </div>
         <div class="col-5">
           <p>
@@ -330,7 +330,7 @@
           <img src="/images/Logo3black.png" alt="logo" class="logo" />
         </div>
       </section>
-      <footer class="row">
+      <footer class="footer row">
         <div class="col-3">
           Elsässer Kältetechnik Königsallee 14 40212 Düsseldorf
         </div>
