--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Document</title>
+    <title>Kältemaschinen</title>
   </head>
   <body>
     <div class="container">
-      <header class="header row col-12">
+      <header class="row col-12 header">
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a class="nav-link" href="#"
               ><img src="/images/Logo.png" alt="logo" class="logo"
             /></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item header__nav">
             <a class="nav-link" href="#">Über Uns</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown header__nav">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
@@ -41,9 +41,9 @@
               <a class="dropdown-item" href="#">Produkte3</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
+          <li class="header__nav nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
+              class="header__nav_item nav-link dropdown-toggle"
               data-toggle="dropdown"
               href="#"
               role="button"
@@ -57,9 +57,9 @@
               <a class="dropdown-item" href="#">Peripherietechnik3</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
+          <li class="header_nav nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle"
+              class="header__nav_item nav-link dropdown-toggle"
               data-toggle="dropdown"
               href="#"
               role="button"
@@ -73,19 +73,19 @@
               <a class="dropdown-item" href="#">Dienstleistungen3</a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Klimatechnik</a>
+          <li class="header__nav nav-item">
+            <a class="header__nav_item nav-link" href="#">Klimatechnik</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Kontakt</a>
+          <li class="header__nav nav-item">
+            <a class="header__nav_item nav-link" href="#">Kontakt</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Presse</a>
+          <li class="header__nav nav-item">
+            <a class="header__nav_item nav-link" href="#">Presse</a>
           </li>
         </ul>
-        <div class="row">
-          <div class="header-left col-6">
-            <h1 class="header-left-title">
+        <div class="header__content row">
+          <div class="header__content_left col-6">
+            <h1 class="header__content_left_title">
               Luftkondensierte Kältemaschinen & Kaltwassersätze
             </h1>
             <p>
@@ -95,7 +95,7 @@
               Gebäudeklimatisierung eingesetzt.
             </p>
           </div>
-          <div class="header-riht col-6">
+          <div class="header__content_riht col-6">
             <img src="/images/Transparent3.png" alt="Transparent3" />
           </div>
         </div>
