add scss modern

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div class="container">
       <header class="row col-12 header">
         <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link" href="#"
+          <li class="nav-item logo">
+            <a class="nav-link header__nav_item" href="#"
               ><img src="/images/Logo.png" alt="logo" class="logo"
             /></a>
           </li>
           <li class="nav-item header__nav">
-            <a class="nav-link" href="#">Über Uns</a>
+            <a class="nav-link header__nav_item" href="#">Über Uns</a>
           </li>
           <li class="nav-item dropdown header__nav">
             <a
-              class="nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle header__nav_item"
               data-toggle="dropdown"
               href="#"
               role="button"
@@ -41,9 +41,9 @@
               <a class="dropdown-item" href="#">Produkte3</a>
             </div>
           </li>
-          <li class="header__nav nav-item dropdown">
+          <li class="nav-item dropdown header__nav">
             <a
-              class="header__nav_item nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle header__nav_item"
               data-toggle="dropdown"
               href="#"
               role="button"
@@ -57,9 +57,9 @@
               <a class="dropdown-item" href="#">Peripherietechnik3</a>
             </div>
           </li>
-          <li class="header_nav nav-item dropdown">
+          <li class="nav-item dropdown header__nav">
             <a
-              class="header__nav_item nav-link dropdown-toggle"
+              class="nav-link dropdown-toggle header__nav_item"
               data-toggle="dropdown"
               href="#"
               role="button"
@@ -73,14 +73,14 @@
               <a class="dropdown-item" href="#">Dienstleistungen3</a>
             </div>
           </li>
-          <li class="header__nav nav-item">
-            <a class="header__nav_item nav-link" href="#">Klimatechnik</a>
+          <li class="nav-item header__nav">
+            <a class="nav-link header__nav_item" href="#">Klimatechnik</a>
           </li>
-          <li class="header__nav nav-item">
-            <a class="header__nav_item nav-link" href="#">Kontakt</a>
+          <li class="nav-item header__nav">
+            <a class="nav-link header__nav_item" href="#">Kontakt</a>
           </li>
-          <li class="header__nav nav-item">
-            <a class="header__nav_item nav-link" href="#">Presse</a>
+          <li class="nav-item header__nav">
+            <a class="nav-link header__nav_item" href="#">Presse</a>
           </li>
         </ul>
         <div class="header__content row">
@@ -88,12 +88,14 @@
             <h1 class="header__content_left_title">
               Luftkondensierte Kältemaschinen & Kaltwassersätze
             </h1>
-            <p>
+            <div class="header__content_left_line"></div>
+            <p class="header__content_left_text">
               Aufgrund der kompakten Bauart werden platzsparende
               luftkondensierte Kompressionskältemaschinen (umgangsspr.
               „Kaltwassersätze“) vielseitig zur Prozesskühlung und
               Gebäudeklimatisierung eingesetzt.
             </p>
+            <div class="header__content_left_line"></div>
           </div>
           <div class="header__content_riht col-6">
             <img src="/images/Transparent3.png" alt="Transparent3" />
@@ -101,40 +103,49 @@
         </div>
       </header>
       <section class="energ row">
-        <div class="energ-left col-8">
+        <div class="energ-left col-7">
           <img src="/images/Refrigeration.png" alt="Refrigeration" />
         </div>
-        <div class="energ-right col-4">
-          <h3 class="energ-right-title">ENERGIEEFFIZIENZ IM FOKUS</h3>
-          <p>
-            Bei der Anschaffung sollte deshalb besonders auf energieeffiziente
-            Systeme geachtet werden, denn die Betriebskosten der Anlage
-            überschreiten erfahrungsgemäß über die Lebensdauer hinweg die
-            einmaligen Anschaffungskosten um ein vielfaches. Insofern sind die
-            Themen Kompressortechnik und Einsatz von Freikühlung von besonderer
-            Bedeutung, sowie Steuer- und Regelungstechnik besonders wichtig.
+        <div class="energ__right col-5">
+          <h3 class="energ__right_title">ENERGIEEFFIZIENZ IM FOKUS</h3>
+          <p class="energ__right_text">
+            Bei der Anschaffung sollte deshalb besonders auf
+            <span class="energ__right_text_span"
+              >energieeffiziente Systeme</span
+            >
+            geachtet werden, denn die Betriebskosten der Anlage überschreiten
+            erfahrungsgemäß über die Lebensdauer hinweg die einmaligen
+            Anschaffungskosten um ein vielfaches.
+          </p>
+          <p class="energ__right_text">
+            Insofern sind die Themen Kompressortechnik und Einsatz von
+            Freikühlung von besonderer Bedeutung, sowie Steuer- und
+            Regelungstechnik besonders wichtig.
           </p>
         </div>
       </section>
     </div>
     <section class="modern row">
-      <div class="modern_left col-5">
+      <div class="modern_left col-6">
         <img src="/images/asv4sabu3.png" alt="foto" />
       </div>
-      <div class="modern_right col-7">
-        <h3 class="modern-right-title">MODERNSTE STANDARDS</h3>
-        <p>
-          Aktuelle Richtlinien und Verordnungen bezüglich des Kältemittel
-          Phase-Downs müssen berücksichtigt werden. Der langfristige Einsatz des
+      <div class="modern__right col-6">
+        <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
+        <p class="modern__right_text">
+          Aktuelle Richtlinien und Verordnungen bezüglich des
+          <span class="modern__right_text_span">Kältemittel Phase-Downs</span>
+          müssen berücksichtigt werden. Der langfristige Einsatz des
           Kältemittels muss sowohl nach ökonomischen als auch strategischen
           Gesichtspunkten entschieden werden.
         </p>
-        <p>
+        <p class="modern__right_text">
           Alle unsere Kältemaschinen entsprechen dem modernsten Stand der
           Technik und werden in den unterschiedlichsten Branchen eingesetzt.
-          Unser Angebot umfasst ein breites Sortiment an natürlichen und
-          frigenen Kältemitteln, die den aktuellsten Normen und Verordnungen
-          entsprechen.
+          Unser Angebot umfasst ein
+          <span class="modern__right_text_span"
+            >breites Sortiment an natürlichen und frigenen Kältemitteln,</span
+          >
+          die den aktuellsten Normen und Verordnungen entsprechen.
         </p>
       </div>
     </section>
