--- a/index.html
+++ b/index.html
@@ -149,31 +149,28 @@
         </p>
       </div>
     </section>
+    <section class="spezial row">
+      <div class="spezial__left col-6">
+        <h3 class="spezial__left_title">
+          Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
+          integrierter Freikühleinheit.
+        </h3>
+        <p class="spezial__left_text">
+          Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
+          energiesparend über ambiente Umgebungsluft.
+        </p>
+        <p class="spezial__left_text">
+          <span class="spezial__left_text_span"
+            >Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
+            Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
+            erzielt größtmögliche Kosteneinsparungen</span
+          >
+          auch bei kleinen Nennleistungen.
+        </p>
+      </div>
+      <div class="spezial_right col-6"></div>
+    </section>
     <div class="container">
-      <section class="spezial row">
-        <div class="spezial_left col-6">
-          <div class="spezial_left_title">
-            <h3>
-              Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
-              integrierter Freikühleinheit.
-            </h3>
-            <p>
-              Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
-              energiesparend über ambiente Umgebungsluft.
-            </p>
-            <p>
-              Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
-              Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
-              erzielt größtmögliche Kosteneinsparungen auch bei kleinen
-              Nennleistungen.
-            </p>
-          </div>
-        </div>
-        <div class="spezial_right col-6">
-          <button>1</button>
-          <button>2</button>
-        </div>
-      </section>
       <section class="vorteile">
         <h3>IHRE VORTEILE</h3>
         <div class="vorteile_content row">
